@@ -1,3 +1,6 @@
+######### 2013-8-6  ##########
+alter table shop_items_product add column district_id int(11) ,add FOREIGN KEY(district_id) references shop_archives_depositedistrict(id);
+alter table shop_items_productsku add column district_id int(11) ,add FOREIGN KEY(district_id) references shop_archives_depositedistrict(id);
 ######### 2013-7-31  ##########
 alter table shop_purchases_item change column status status varchar(12) NOT NULL;
 alter table shop_purchases_item change column arrival_status arrival_status varchar(12) NOT NULL;
